TP_Canary/ingress_main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-v1
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: hello-app.local
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            name: hello-v1
            port:
              number: 8080
